--- a/axomiya-calender/src/component/Calender.css
+++ b/axomiya-calender/src/component/Calender.css
@@ -1,50 +1,57 @@
 body {
-    font-family: 'Arial', sans-serif;
-    background-color: #f5f5f5;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    margin: 0;
-  }
+  font-family: 'Arial', sans-serif;
+  background-color: #f5f5f5;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  margin: 0;
+}
 
-  .calendar-box {
-    background-color: #fff;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    overflow: hidden;
-  }
+.calendar-box {
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  width: 100%;
+}
 
-  .calendar-header {
-    background-color: #3498db;
-    color: #fff;
-    text-align: center;
-    padding: 15px;
-    border-bottom: 2px solid #2980b9;
-  }
+.calendar-header {
+  background-color: #3498db;
+  color: #fff;
+  text-align: center;
+  padding: 15px;
+  border-bottom: 2px solid #2980b9;
+}
 
-  .month {
-    font-size: 1.5em;
-    font-weight: bold;
-  }
+.month {
+  font-size: 1.5em;
+  font-weight: bold;
+}
 
+.days {
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  padding: 15px;
+}
+
+.day {
+  text-align: center;
+  padding: 10px;
+  font-weight: bold;
+  border: 1px solid #ddd;
+}
+
+.day:hover {
+  background-color: #ecf0f1;
+}
+
+.current-month {
+  color: #3498db;
+}
+
+
+@media screen and (max-width: 480px) {
   .days {
-    display: grid;
-    grid-template-columns: repeat(7, 1fr);
-    padding: 15px;
+    grid-template-columns: repeat(1, 1fr); 
   }
-
-  .day {
-    text-align: center;
-    padding: 10px;
-    font-weight: bold;
-    border: 1px solid #ddd;
-  }
-
-  .day:hover {
-    background-color: #ecf0f1;
-  }
-
-  .current-month {
-    color: #3498db;
-  }
+}
