--- a/axomiya-calender/src/component/Try.css
+++ b/axomiya-calender/src/component/Try.css
@@ -21,15 +21,7 @@ body {font-family: Verdana, sans-serif;}
   letter-spacing: 3px;
 }
 
-.month .prev {
-  float: left;
-  padding-top: 10px;
-}
 
-.month .next {
-  float: right;
-  padding-top: 10px;
-}
 
 .weekdays {
   margin: 0;
@@ -67,14 +59,18 @@ body {font-family: Verdana, sans-serif;}
   color: rgb(217, 10, 10) !important
 }
 
-/* Add media queries for smaller screens */
+
 @media screen and (max-width:720px) {
   .weekdays li, .days li {width: 13.1%;}
 }
 
 @media screen and (max-width: 420px) {
-  .weekdays li, .days li {width: 12.5%;}
+  .weekdays li, .days li {width: 13.5%;}
   .days li .active {padding: 2px;}
+  .weekdays li {
+    font-size: 9px;
+  }
+  
 }
 
 @media screen and (max-width: 290px) {
