--- a/frontend/src/component/categoryHeader/categoryHeader.css
+++ b/frontend/src/component/categoryHeader/categoryHeader.css
@@ -40,7 +40,7 @@
 
 .category-nav {
     background-color: #fff;
-    padding: 10px 20px;
+    /*padding: 10px 20px;*/
     border-top: 1px solid #e0e0e0;
     display: flex;
     justify-content: center;
